--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ header {
 
 h1 {
   font-weight: bold;
-  font-size: 8rem;
+  font-size: 4rem;
 }
 
 p {
@@ -41,14 +41,14 @@ p {
 }
 
 .hero .hero__logo {
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
   display: block;
   max-height: 12rem;
-  margin-right: 4em;
+  margin-right: 8%;
 }
 
 .hero .hero__text-group {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   min-width: 0;
 }
 
@@ -57,8 +57,36 @@ p {
   margin-bottom: 0.2em;
 }
 
+.hero .hero__heading {
+  font-size: 28px;
+}
+
+@media screen and (min-width: 200px) {
+  .hero .hero__heading {
+    font-size: calc(28px + 100 * ((100vw - 200px) / 620));
+  }
+}
+
+@media screen and (min-width: 820px) {
+  .hero .hero__heading {
+    font-size: 128px;
+  }
+}
+
 .hero .hero__subheading {
-  font-size: 2.25rem;
+  font-size: 8px;
+}
+
+@media screen and (min-width: 200px) {
+  .hero .hero__subheading {
+    font-size: calc(8px + 28 * ((100vw - 200px) / 620));
+  }
+}
+
+@media screen and (min-width: 820px) {
+  .hero .hero__subheading {
+    font-size: 36px;
+  }
 }
 
 .trailer {
@@ -117,29 +145,29 @@ p {
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   -webkit-animation: fruit-wave 10s ease-in-out infinite alternate;
           animation: fruit-wave 10s ease-in-out infinite alternate;
 }
 
 .trailer .trailer__orange {
-  width: 144px;
-  height: 144px;
+  width: 12.5%;
+  padding-bottom: 12.5%;
 }
 
 .trailer .trailer__orange::before {
-  background-image: url("/res/svg/orange.svg");
+  background-image: url("../res/svg/orange.svg");
 }
 
 .trailer .trailer__orange:nth-of-type(1) {
-  left: -100px;
+  left: -9%;
   top: 15%;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
 }
 
 .trailer .trailer__orange:nth-of-type(2) {
-  right: -85px;
+  right: -7.5%;
   bottom: 15%;
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
@@ -151,16 +179,16 @@ p {
 }
 
 .trailer .trailer__banana {
-  width: 104px;
-  height: 108px;
+  width: 9.375%;
+  padding-bottom: 9.375%;
 }
 
 .trailer .trailer__banana::before {
-  background-image: url("/res/svg/banana.svg");
+  background-image: url("../res/svg/banana.svg");
 }
 
 .trailer .trailer__banana:nth-of-type(3) {
-  left: -160px;
+  left: -13%;
   bottom: 10%;
   -webkit-transform: translateX(200%);
           transform: translateX(200%);
@@ -172,7 +200,7 @@ p {
 }
 
 .trailer .trailer__banana:nth-of-type(4) {
-  right: -140px;
+  right: -12%;
   top: 15%;
   -webkit-transform: translateX(-200%);
           transform: translateX(-200%);
