--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,29 @@ $colAccent: #6190FF;
 $contentWidth: 1200px;
 $borderRadius: 3px;
 
+@function strip-unit($value) {
+  @return $value / ($value * 0 + 1);
+}
+
+@mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
+  $u1: unit($min-vw);
+  $u2: unit($max-vw);
+  $u3: unit($min-font-size);
+  $u4: unit($max-font-size);
+
+  @if $u1 == $u2 and $u1 == $u3 and $u1 == $u4 {
+    & {
+      font-size: $min-font-size;
+      @media screen and (min-width: $min-vw) {
+        font-size: calc(#{$min-font-size} + #{strip-unit($max-font-size - $min-font-size)} * ((100vw - #{$min-vw}) / #{strip-unit($max-vw - $min-vw)}));
+      }
+      @media screen and (min-width: $max-vw) {
+        font-size: $max-font-size;
+      }
+    }
+  }
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Palanquin:wght@400;700&display=swap');
 
 body {
@@ -29,7 +52,7 @@ header {
 
 h1 {
   font-weight: bold;
-  font-size: (128 / 16 * 1rem);
+  font-size: (64 / 16 * 1rem);
 }
 
 p {
@@ -44,23 +67,24 @@ p {
   padding-bottom: 10vh;
 
   .hero__logo {
-    flex-shrink: 0;
     display: block;
     max-height: 12rem;
-    margin-right: 4em;
+    margin-right: 8%;
   }
 
   .hero__text-group {
+    flex-shrink: 0;
     min-width: 0; // allows text inside to wrap
   }
 
   .hero__heading {
     margin-left: -0.05em; // magic number to align with subheadline
     margin-bottom: 0.2em;
+    @include fluid-type(200px, ($contentWidth - 380px), 28px, 128px);
   }
 
   .hero__subheading {
-    font-size: (36 / 16 * 1rem);
+    @include fluid-type(200px, ($contentWidth - 380px), 8px, 36px);
   }
 }
 
@@ -98,27 +122,27 @@ p {
       width: 100%;
       height: 100%;
       background-repeat: no-repeat;
-      background-size: cover;
+      background-size: contain;
 
       animation: fruit-wave 10s ease-in-out infinite alternate;
     }
   }
 
   .trailer__orange {
-    width: 144px;
-    height: 144px;
+    width: 12.5%;
+    padding-bottom: 12.5%;
 
     &::before {
-      background-image: url('/res/svg/orange.svg');
+      background-image: url('../res/svg/orange.svg');
     }
 
     &:nth-of-type(1) {
-      left: -100px;
+      left: -9%;
       top: 15%;
       transform: translateX(100%);
     }
     &:nth-of-type(2) {
-      right: -85px;
+      right: -7.5%;
       bottom: 15%;
       transform: translateX(-100%);
 
@@ -127,22 +151,22 @@ p {
   }
 
   .trailer__banana {
-    width: 104px;
-    height: 108px;
+    width: 9.375%;
+    padding-bottom: 9.375%;
 
     &::before {
-      background-image: url('/res/svg/banana.svg');
+      background-image: url('../res/svg/banana.svg');
     }
 
     &:nth-of-type(3) {
-      left: -160px;
+      left: -13%;
       bottom: 10%;
       transform: translateX(200%);
 
       &::before { animation-delay: -2.5s; }
     }
     &:nth-of-type(4) {
-      right: -140px;
+      right: -12%;
       top: 15%;
       transform: translateX(-200%);
 
