--- a/css/reset.css
+++ b/css/reset.css
@@ -20,3 +20,16 @@ ol, ul {
 iframe {
   border: none;
 }
+
+button {
+  border: none;
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+  font-size: inherit;
+  color: inherit;
+  background: none;
+  text-decoration: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
