--- a/css/reset.css
+++ b/css/reset.css
@@ -30,6 +30,7 @@ button {
   color: inherit;
   background: none;
   text-decoration: none;
+  font-family: inherit;
   -webkit-appearance: none;
   -moz-appearance: none;
 }
