--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,9 @@
 body {
   min-height: 100vh;
   background-color: #F8F8F8;
-  font-family: 'Palanquin', 'Open Sans', Helvetica, sans-serif;
+  font-family: "Palanquin", "Open Sans", Helvetica, sans-serif;
   color: #26203A;
-  font-size: 0.8rem;
+  font-size: 0.75rem;
 }
 
 @media screen and (min-width: 560px) {
@@ -52,8 +52,38 @@ h2 {
   margin-top: 1.5em;
 }
 
+h3 {
+  font-weight: normal;
+  font-size: 3em;
+  margin-top: 1.5em;
+}
+
+h2 + h3 {
+  margin-top: 0.5em;
+}
+
+h4 {
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  margin-top: 1em;
+}
+
 p {
-  line-height: 1.4;
+  line-height: 1.5;
+}
+
+p + p {
+  margin-top: 1em;
+}
+
+kbd {
+  color: #FFFFFF;
+  background-color: #342D4A;
+  border-radius: 0.2em;
+  padding: 0.2em 0.3em;
+  font-family: "Fira Mono", "Consolas", monospace;
+  font-size: 0.75em;
 }
 
 .hero {
@@ -250,7 +280,7 @@ p {
 }
 
 .servers {
-  margin-top: 2em;
+  margin-top: 2rem;
 }
 
 .servers .servers__server {
@@ -273,7 +303,7 @@ p {
       -ms-flex-align: start;
           align-items: flex-start;
   width: 100%;
-  padding: 18px 3%;
+  padding: 10px 3%;
   color: #FFFFFF;
   background-color: #26203A;
   border-radius: 3px;
@@ -502,7 +532,7 @@ p {
       -ms-flex-positive: 1;
           flex-grow: 1;
   color: #FFFFFF;
-  font-family: 'Fira Mono', 'Consolas', monospace;
+  font-family: "Fira Mono", "Consolas", monospace;
   font-weight: bold;
   font-size: 0.666em;
   padding: 1em 2em;
@@ -534,5 +564,69 @@ p {
 
 .servers .servers__ipbtn.clicked::before {
   background-image: url("../res/svg/copy-success.svg");
+}
+
+.txt-img-headline {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.txt-img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 1rem;
+  margin-bottom: 6em;
+}
+
+.txt-img .txt-img__img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.txt-img .txt-img__text-group p {
+  font-size: 1.5em;
+}
+
+@media screen and (min-width: 560px) {
+  .txt-img {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .txt-img .txt-img__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    padding-right: 1rem;
+  }
+  .txt-img .txt-img__text-group {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    padding-left: 1rem;
+    margin-top: -0.6em;
+  }
+  .txt-img.txt-img--reverse {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .txt-img.txt-img--reverse .txt-img__img {
+    padding-right: 0;
+    padding-left: 1rem;
+  }
+  .txt-img.txt-img--reverse .txt-img__text-group {
+    padding-left: 0;
+    padding-right: 1rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
