--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,16 +1,30 @@
-$colPrimary: #26203A;
-$colPrimaryL1: #342D4A;
-$colSecondary: #F8F8F8;
-$colSecondaryL1: #FFFFFF;
-$colAccent: #6190FF;
-$colSuccess: #27AE60;
-$colError: #E65755;
-
 $fontMain: 'Palanquin', 'Open Sans', Helvetica, sans-serif;
 $fontMonospace: 'Fira Mono', 'Consolas', monospace;
 
 $contentWidth: 1200px;
 $borderRadius: 3px;
+
+:root {
+  --colPrimary: #26203A;
+  --colPrimaryL1: #342D4A;
+  --colSecondary: #F8F8F8;
+  --colSecondaryL1: #FFFFFF;
+  --colAccent: #6190FF;
+  --colSuccess: #27AE60;
+  --colError: #E65755;
+  --colText: var(----colPrimary);
+
+  @media (prefers-color-scheme: dark) {
+    --colPrimary: #F8F8F8;
+    --colPrimaryL1: #FFFFFF;
+    --colSecondary: #26203A;
+    --colSecondaryL1: #342D4A;
+    --colAccent: #6190FF;
+    --colSuccess: #27AE60;
+    --colError: #E65755;
+    --colText: #FFF0CA;
+  }
+}
 
 @function strip-unit($value) {
   @return $value / ($value * 0 + 1);
@@ -43,8 +57,8 @@ $borderRadius: 3px;
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@700&display=swap');
 
 ::selection {
-  background-color: $colAccent;
-  color: $colSecondaryL1;
+  background-color: var(--colAccent);
+  color: var(--colSecondaryL1);
 }
 
 .precache {
@@ -56,9 +70,9 @@ $borderRadius: 3px;
 
 body {
   min-height: 100vh;
-  background-color: $colSecondary;
+  background-color: var(--colSecondary);
   font-family: $fontMain;
-  color: $colPrimary;
+  color: var(--colText);
 
   font-size: 0.75rem;
   @include query-tablet-portrait-up {
@@ -67,7 +81,7 @@ body {
 }
 
 header {
-  background-color: $colSecondaryL1;
+  background-color: var(--colSecondaryL1);
 }
 
 .container {
@@ -114,8 +128,8 @@ p + p {
 }
 
 kbd {
-  color: $colSecondaryL1;
-  background-color: $colPrimaryL1;
+  color: var(--colSecondaryL1);
+  background-color: var(--colPrimaryL1);
   border-radius: 0.2em;
   padding: 0.2em 0.3em;
   font-family: $fontMonospace;
@@ -158,7 +172,7 @@ kbd {
   width: 100%;
   padding-bottom: (9% / 16 * 100);
   margin-top: 5vh;
-  background-color: $colPrimary;
+  background-color: var(--colPrimary);
   border-radius: $borderRadius;
 
   iframe {
@@ -260,8 +274,8 @@ kbd {
     align-items: flex-start;
     width: 100%;
     padding: 10px 3%;
-    color: $colSecondaryL1;
-    background-color: $colPrimary;
+    color: var(--colSecondaryL1);
+    background-color: var(--colPrimary);
     border-radius: $borderRadius;
     white-space: nowrap;
     cursor: pointer;
@@ -274,17 +288,17 @@ kbd {
 
     &:hover,
     &:focus {
-      background-color: $colPrimaryL1;
+      background-color: var(--colPrimaryL1);
     }
 
     border-right: 8px solid transparent;
     transition: border-right-color 400ms ease;
   }
   .online .servers__main {
-    border-right-color: $colSuccess;
+    border-right-color: var(--colSuccess);
   }
   .offline .servers__main {
-    border-right-color: $colError;
+    border-right-color: var(--colError);
   }
 
   .servers__server + .servers__server {
@@ -322,6 +336,17 @@ kbd {
   }
   .expanded.offline .servers__status::before {
     background-image: url('../res/svg/offline-w.svg');
+  }
+
+  @media (prefers-color-scheme: dark) {
+    .servers__server:not(.expanded) {
+      .servers__map::before { background-image: url('../res/svg/map-dark.svg'); }
+      .servers__players::before { background-image: url('../res/svg/players-dark.svg'); }
+    }
+
+    .servers__server.expanded .servers__main {
+      color: var(--colPrimaryL1);
+    }
   }
 
   .servers__name,
@@ -399,7 +424,7 @@ kbd {
   .servers__expand {
     justify-content: flex-end;
     flex-wrap: wrap;
-    background-color: $colAccent;
+    background-color: var(--colAccent);
     border-radius: 0 0 $borderRadius $borderRadius;
 
     display: none; //flex
@@ -407,7 +432,7 @@ kbd {
 
   .expanded {
     .servers__main {
-      background-color: $colAccent;
+      background-color: var(--colAccent);
       border-radius: $borderRadius $borderRadius 0 0;
       border-right-width: 0;
       padding-right: calc(3% + 8px);
@@ -423,7 +448,7 @@ kbd {
     cursor: pointer;
     &:hover,
     &:focus {
-      background-color: $colSecondary;
+      background-color: var(--colSecondary);
     }
   }
 
@@ -442,8 +467,8 @@ kbd {
     display: block;
     padding: 0.5em 1.5em;
     text-decoration: none;
-    color: $colAccent;
-    background-color: $colSecondaryL1;
+    color: var(--colAccent);
+    background-color: var(--colSecondaryL1);
     font-weight: bold;
     text-align: center;
   }
@@ -451,12 +476,12 @@ kbd {
   .servers__ip {
     display: flex;
     align-items: center;
-    background-color: $colPrimary;
+    background-color: var(--colPrimary);
   }
 
   .servers__iptext {
     flex-grow: 1;
-    color: $colSecondaryL1;
+    color: var(--colSecondaryL1);
     font-family: $fontMonospace;
     font-weight: bold;
     font-size: 0.666em;
@@ -469,7 +494,7 @@ kbd {
     display: block;
     width: 2em;
     height: 100%;
-    background-color: $colSecondaryL1;
+    background-color: var(--colSecondaryL1);
     border-radius: 0 $borderRadius $borderRadius 0;
 
     &::before {
@@ -518,20 +543,21 @@ kbd {
     flex-direction: row;
 
     .txt-img__img {
-      flex: 0 0 50%;
-      padding-right: 1rem;
+      flex: 1 0 0;
+      margin-right: 1rem;
+      border-radius: $borderRadius;
     }
     .txt-img__text-group {
-      flex: 0 0 50%;
-      padding-left: 1rem;
+      flex: 1 0 0;
+      margin-left: 1rem;
       margin-top: -0.6em; // magic number to align with video
     }
 
     &.txt-img--reverse {
       flex-direction: row-reverse;
 
-      .txt-img__img { padding-right: 0; padding-left: 1rem; }
-      .txt-img__text-group { padding-left: 0; padding-right: 1rem; }
+      .txt-img__img { margin-right: 0; margin-left: 1rem; }
+      .txt-img__text-group { margin-left: 0; margin-right: 1rem; }
     }
   }
 }
